--- a/templates/task/test.html.twig
+++ b/templates/task/test.html.twig
@@ -1,7 +1,13 @@
 {% extends 'base.html.twig' %}
 {% block title %}Guest book{% endblock %}
 {% block body %}
-{{ form_start(form) }}
+<section class="wrapper">
+    <div class="inner">
+    <header class="special">
+        <h2>Sem turpis amet semper</h2>
+        <p>In arcu accumsan arcu adipiscing accumsan orci ac. Felis id enim aliquet. Accumsan ac integer lobortis commodo ornare aliquet accumsan erat tempus amet porttitor.</p>
+    </header>
+    {{ form_start(form) }}
     {{ form_row(form.username) }}
     {{ form_row(form.email) }}
     {{ form_row(form.plainPassword.first) }}
@@ -12,4 +18,6 @@
     <a href="{{ logout_path() }}" class="btn btn-danger">Logout</a>
     {% endif %}
 {{ form_end(form) }}
+    </div>
+</section>
 {% endblock %}
