--- a/templates/task/reviews.html.twig
+++ b/templates/task/reviews.html.twig
@@ -9,6 +9,7 @@
                     <th>{{ knp_pagination_sortable(pagination, 'Username'|trans, 'username') }}</th>
                     <th>{{ knp_pagination_sortable(pagination, 'E mail'|trans, 'e_mail') }}</th>
                     <th>{{ knp_pagination_sortable(pagination, 'Review'|trans, 'user_review') }}</th>
+                    <th>Picture</th>
                     <th>{{ knp_pagination_sortable(pagination, 'Date'|trans, 'pub_date') }}</th>
 
                 </tr>
@@ -22,6 +23,7 @@
 
                     <td>{{ row.eMail }}</td>
                     <td>{{ row.userReview }}</td>
+                    <td><img src="/images/{{ row.brochure }}"></td>
                     <td>{{ row.pubDate|date('H:i:s y/m/d') }}</td>
 
                 </tr>
