--- a/public/css/main.css
+++ b/public/css/main.css
@@ -123,7 +123,8 @@ strong, b {
   font-weight: 600; }
 
 em, i {
-  font-style: italic; }
+  font-style: italic;
+  font-family: FontAwesome;}
 
 p {
   margin: 0 0 2rem 0; }
