--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -34,18 +34,19 @@
 <nav id="menu">
     <ul class="links">
         <li><a href="{{ path('app_homepage')}}">{% trans  %}Home{% endtrans %}</a></li>
-       <li><a href="{{ path('app_yop') }}">{% trans  %}Reviews{% endtrans %}</a></li>
+        <li><a href="{{ path('app_yop') }}">{% trans  %}Reviews{% endtrans %}</a></li>
         <li><a href="{{ path('user_review') }}">{% trans  %}Leave review{% endtrans %}</a></li>
 
         {% if is_granted('IS_AUTHENTICATED_REMEMBERED')  %}
-        <li><a href="{{ path('app_logout') }}">{% trans  %}Logout{% endtrans %}</a></li>
-        <li><a href="{{ path('/lang') }}">{% trans  %}Language{% endtrans %}</a></li>
 
+            <li><a href="{{ path('/lang') }}">{% trans  %}Language{% endtrans %}</a></li>
+            <li><a href="{{ path('archive') }}">{% trans  %}Archive{% endtrans %}</a></li>
+            <li><a href="{{ path('app_logout') }}">{% trans  %}Logout{% endtrans %}</a></li>
         {% else %}
 
 
-        <li><a href="{{ path('user_registration') }}">{% trans  %}Sign up{% endtrans %}</a></li>
-        <li><a href="{{ path('app_login') }}">{% trans  %}Sign in{% endtrans %}</a></li>
+            <li><a href="{{ path('user_registration') }}">{% trans  %}Sign up{% endtrans %}</a></li>
+            <li><a href="{{ path('app_login') }}">{% trans  %}Sign in{% endtrans %}</a></li>
         {% endif %}
 
     </ul>
