--- a/templates/task/test.html.twig
+++ b/templates/task/test.html.twig
@@ -1,7 +1,9 @@
 {% extends 'base.html.twig' %}
 {% block title %}{% trans %}Register{% endtrans %}!{% endblock %}
 {% block body %}
-
+    {% if error %}
+        <div class="alert alert-danger">{{ error }}</div>
+    {% endif %}
     {{ form_start(form) }}
     {{ form_row(form.username) }}
     {{ form_row(form.email) }}
