--- a/templates/archive/index.html.twig
+++ b/templates/archive/index.html.twig
@@ -25,7 +25,7 @@
                     <th>{{'Username'|trans}}</th>
                     <th>{{'E mail'|trans}}</th>
                     <th>{{'Review'|trans }}</th>
-                    <th>Picture</th>
+                    <th>{{ 'Picture'|trans }}</th>
                     <th>{{'Date'|trans}}</th>
                     <th>{{'Action'|trans}}</th>
 
