--- a/templates/archive/delete_u_r.html.twig
+++ b/templates/archive/delete_u_r.html.twig
@@ -3,7 +3,7 @@
 
 {% block body %}
 <p>
-<h2>Are you sure you want to delete it?</h2>
+<h2>{{ 'Are you sure you want to delete it'|trans }}?</h2>
 {{ form(form) }}
 </p>
 {% endblock %}
